feat: add picture feature,but still in developing

--- a/开发日记.md
+++ b/开发日记.md
@@ -64,4 +64,58 @@
 
 23:30~24:00
 
-成功实现了使用Websocket对传入的消息进行应答
+成功实现了使用Websocket对传入的消息进行应答（任务0进阶内容）
+
+## Day2
+
+10:30~11:30
+
+（完成了任务0基本要求与任务1具体内容）
+
+插件化的编写了复读功能，并增加了判断群号发消息的功能。
+
+11:30~12:00
+
+把bot丢进了水友群里面，被群友提了好多idea
+
+~~会做的会做的.jpg~~
+
+12:00~13:00
+
+~~原来鸡公煲有卖黄焖鸡米饭！~~
+
+15:00~17:00
+
+开始考虑任务1，学习MySQL的使用方式以及构思其他内容。
+
+*原来图片是图链啊那没事了*
+
+17:00~18:00
+
+~~我现在就要吃！汉堡王！~~
+
+19:00~20:45
+
+想把建库建表的操作塞进代码里面，开启bot的时候查询是否已有表/库，没有则自动建立
+
+查阅各种资料，无果，自闭，遂手动建库
+
+20:45~22:00
+
+莫名其妙的找到了上述操作的解决方案
+
+在学习如何发送图片消息（CQ码？）
+
+22:00~22:30
+
+学习了CQ码，成功发出了第一张图片
+
+22:30~24:00
+
+在数据库上的连接出了一些问题，似乎一个代码的不同模块无法一起连上MYSQL
+
+到处查资料但是都不管用，非常自闭
+
+最后发现是一个SQL的语句写错导致其跳过了调试语句，导致我以为连接失败
+
+*时间都损失在里面！（*
