feat: finish the store, send and delete picture feature

--- a/开发日记.md
+++ b/开发日记.md
@@ -119,3 +119,31 @@
 最后发现是一个SQL的语句写错导致其跳过了调试语句，导致我以为连接失败
 
 *时间都损失在里面！（*
+
+## Day3
+
+7:30~8:30
+
+实现了任务1的基本要求，以及任务2的数据库要求
+
+发现了奇妙的bug：QQ号大小可能会超过int_max导致无法存入
+
+8:30~9:00
+
+bug fixed
+
+10:00~12:00
+
+尝试写删除功能，但是遇到了无法用websocket接收查询结果，QQ图链变化之类的严重困难
+
+16:00~17:00
+
+完成了删除功能
+
+17:00~19:00
+
+删除功能爆炸了！腾讯的锅.jpg
+
+删除功能突然又好了！不管了
+
+写完了rank功能，但是还没完成输出部分
