fix:now ranklist will be sorted in a right order

--- a/开发日记.md
+++ b/开发日记.md
@@ -147,3 +147,21 @@ bug fixed
 删除功能突然又好了！不管了
 
 写完了rank功能，但是还没完成输出部分
+
+19:00~20:00
+
+~~我不允许有人没有体验过吉野家的味噌汤！~~
+
+## Day4
+
+18:00~19:00
+
+~~我现在就要用美团点外卖！~~
+
+19:00~21:00
+
+稍微优化了一下picture插件的代码架构
+
+实现了任务2的基本要求。
+
+测试的时候群友依旧玩的很开心
