feat: add help plugin

--- a/开发日记.md
+++ b/开发日记.md
@@ -165,3 +165,19 @@ bug fixed
 实现了任务2的基本要求。
 
 测试的时候群友依旧玩的很开心
+
+21:00~21:30
+
+测试出了一些bug，然后处理掉了。
+
+21:30~23:00
+
+查阅学习Bing API相关资料，然后写代码测试
+
+发现需要注册账号，并在注册账号时遇到了一定困难。于是暂停该部分工作。
+
+## Day5
+
+7:00~8:30
+
+学习了JSON存储数据的格式，并为bot增加了help功能
