feat: add config feature and so on in werewolf plugin

--- a/开发日记.md
+++ b/开发日记.md
@@ -181,3 +181,23 @@ bug fixed
 7:00~8:30
 
 学习了JSON存储数据的格式，并为bot增加了help功能
+
+游戏配置不合理！
+
+20:00~24:00
+
+开始写狼人杀！
+
+*大模拟！大模拟！*
+
+打算把任务三四和进阶内容一起写掉
+
+完成了加入房间，修改配置等功能。
+
+## Day6
+
+8:30~
+
+*来个人教教我狼人杀规则吧*
+
+与游戏规则细节斗智斗勇
