feat: finish all the feature in werewolf plugin

--- a/开发日记.md
+++ b/开发日记.md
@@ -196,8 +196,22 @@ bug fixed
 
 ## Day6
 
-8:30~
+8:30~12:00
 
 *来个人教教我狼人杀规则吧*
 
 与游戏规则细节斗智斗勇
+
+写完了游戏进程以外的所有部分
+
+15:45~16:45
+
+进行了对已有功能的一系列debug
+
+18:15~24:00
+
+写完了整个狼人杀代码（任务三四和进阶内容），但尚未调试。
+
+讲真自动判断当前局面是否必胜或必败真的是应该做的吗？
+
+感觉这个是一个很复杂的分类讨论，但是花了大量时间分析完了，感觉不一定值得。
