fix: fix some bugs

--- a/开发日记.md
+++ b/开发日记.md
@@ -215,3 +215,19 @@ bug fixed
 讲真自动判断当前局面是否必胜或必败真的是应该做的吗？
 
 感觉这个是一个很复杂的分类讨论，但是花了大量时间分析完了，感觉不一定值得。
+
+## Day7
+
+8:00~9:30
+
+给狼人杀编写help文档和游戏规则书
+
+18:00~24:00
+
+狼人杀公测！（雾）
+
+在自行调试了一段时间后，在群里上线了bot的狼人杀功能，并且和一些热心群友进行了一定的测试。
+
+基本解决了已经见到的bug，但在玩家随机离开时仍然有可能出现问题，并未得到全面测试。
+
+了解爬虫相关知识。
