fix: fix some bugs

--- a/开发日记.md
+++ b/开发日记.md
@@ -231,3 +231,15 @@ bug fixed
 基本解决了已经见到的bug，但在玩家随机离开时仍然有可能出现问题，并未得到全面测试。
 
 了解爬虫相关知识。
+
+## Day8
+
+7:00~8:30
+
+写好了爬虫并可以正确发出图片。
+
+群友们玩的非常开心！
+
+9:00~11:00
+
+继续测试狼人杀功能以及修改调整代码。
